# personaldiary

./: .env_simple  README.md  pyproject.toml
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/diary/: detail_records.html  diary.html  edit_record.html  index.html
diary/templates/diary/includes/: inc_footer.html  inc_navbar.html
users/: models.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
