[tool.poetry]
name = "personaldiary"
version = "0.1.0"
description = ""
authors = ["Alexei <rojd75@mail>ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
black = "^24.8.0"
djangorestframework = "^3.15.2"
redis = "^5.1.0"
python-dotenv = "^1.0.1"
drf-yasg = "^1.21.7"
colorama = "^0.4.6"
djangorestframework-jwt = "^1.11.0"
ipython = "^8.28.0"
isort = "^5.13.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
celery = "^5.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
